6/12 세번째 커밋

--- a/product.html
+++ b/product.html
@@ -13,36 +13,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-        <!-- 네이버 서치 도구 -->
-        <meta name="naver-site-verification" content="dc99ea60cc71a3cbc013e02dc288df8f037fad1c"/>
-        <!-- 구글 서치 도구 -->
-        <meta name="google-site-verification" content="nUPrmBwnEWVOP4biFcki8p44jaE4TyRFks3sguUp49A" />
-
-        <meta http-equiv="Content-Script-Type" content="text/javascript" /> 
-        <meta http-equiv="Content-Style-Type" content="text/css" />
-
-        <meta name="Description" content="브랜드 가치를 이야기하며 최적의 타이밍과 최상의 상품을 만들어가는 제너셀 | 고백키트 | 마스크팩 | 어릴 때의 나를 Go-Back!" />
-        <meta name="Keywords" content="제너셀,고백키트,블랑두부,Go-Back 마스크,SNS 커머스" />
-        <meta name="Robots" content="index, follow" />
-
-        <meta name="Date" content="2019-05-29 PM 18:13" />
-        <meta http-equiv="Build" content="2019-05-29" />
-        <meta http-equiv="Last-Modified" content="2019-05-29 PM 18:13" />
-
-        <meta http-equiv="Subject" content="제너셀 | 어릴 때의 피부로 돌아가자! Go-Back!" />
-        <meta http-equiv="Filename" content="index.html" />
-        <meta http-equiv="Distribution" content="전형동" />
-        <meta http-equiv="Copyright" content="copyright@genucell" />
-
-        <meta http-equiv="Reply-To" content="genucell@genucell.co.kr" /> 
-        <meta http-equiv="Email" content="genucell@genucell.co.kr" />
-        <meta http-equiv="Generator" content="sublime text3" />
-        <meta http-equiv="Other Agent" content="전형동" />
-        <meta http-equiv="Publisher" content="제너셀" />
-        <meta http-equiv="Title" content="제너셀 | 또 다른 나를 만나는 Stage" />
-
-
+        
         <!-- stylesheets -->
         <link rel="stylesheet" href="assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/css/font-awesome.min.css">
@@ -92,7 +63,7 @@
                                 <a href="index.html"><span>home</span></a>
                             </li>
                             <li>
-                                <a href="product.html">product</a>
+                                <a href="about.html">about</a>
                             </li>
                         </ul><!--   end of /.dropdown-menu -->
                     </div><!-- nav links -->
@@ -109,7 +80,7 @@
                     <div class="container">
                         <div class="welcome-speech">
                             <h1 style="font-weight: 700;">Product</h1>
-                            <p>젊음에 풍덩! <br> 제너셀로 고백하세요!</p>
+                            <p>어제의 나를 만나는 판도라! <br> 제너셀로 고백하세요!</p>
                             <!-- <a href="#" class="btn btn-white">
                                 Our Works
                             </a> -->
@@ -300,35 +271,7 @@
 
             <!-- ABOUT PAGE -->
             <div class="main-content">
-
-                <!-- begin our story section -->
-
-                <!-- <section class="bg-white story">
-                    <div class="container">
-                        <div class="headline text-center">
-                            <div class="row">
-                                <div class="col-md-6 col-md-offset-3">
-                                    <h2 class="section-title">고백 패키지</h2>
-                                </div>
-                            </div>
-                        </div> /.headline
-                
-                        <div class="row">
-                            <div class="col-md-10 col-md-offset-1 text-center">
-                                <p class="story-description">
-                                    상품설명
-                                </p> /.story-description
-                            </div>
-                        </div>
-                    </div>
-                </section> -->
-                <!-- end of our story section -->
-
-
-                <!-- begin our designation section -->
-
                 <br><br>
-
                 <section class="bg-white designation">
                     <div class="container">
 
