--- a/about.html
+++ b/about.html
@@ -155,10 +155,9 @@
                                 <div class="headline text-center">
                                     <div class="row">
                                         <div class="col-md-6 col-md-offset-3">
-                                            <h2 class="section-title">구매문의</h2>
+                                            <h2 class="section-title">상담문의</h2>
                                             <p class="section-sub-title">
-                                                If you have any questions or comments, or would just like to say hello, 
-                                                <br/>please feel free to contact our friendly team
+                                                궁금하신 사항을 아래와 같이 기재하여 발송해 주세요.
                                             </p> <!-- /section-sub-title -->
                                         </div>
                                     </div>
@@ -170,108 +169,35 @@
                                         <div class="col-md-4">
 
                                             <div class="form-group">
-                                                <input  name="name" type="text" class="form-control" id="name" required="required" placeholder="Full Name">
+                                                <input  name="name" type="text" class="form-control" id="name" required="required" placeholder="이름">
                                             </div>
 
                                             <div class="form-group">
-                                                <input name="email" type="email" class="form-control" id="email" required="required" placeholder="Email Address">
+                                                <input name="email" type="email" class="form-control" id="email" required="required" placeholder="이메일">
                                             </div>
 
                                             <div class="form-group">
-                                                <input name="website" type="url" class="form-control" id="subject" required="required" placeholder="Your Website">
+                                                <input name="phone" type="number" class="form-control" id="phone" required="required" placeholder="연락처">
                                             </div>
 
                                         </div>
-
                                         <div class="col-md-8">
-                                            <textarea name="message" type="text" class="form-control" id="message" rows="8" required="required" placeholder="Type here message"></textarea>
+                                            <textarea name="message" type="text" class="form-control" id="message" rows="8" required="required" placeholder="내용"></textarea>
                                         </div>
                                     </div>
-
-                                        <button type="submit" id="submit" name="submit" class="btn btn-black">send message</button>
-                                    
+                                    <button type="submit" id="submit" name="submit" class="btn btn-black">전송하기</button>
                                 </form> <!-- form end -->
                             </section> <!-- /.contact-form -->
 
-
-                            <div class="col-md-4 col-xs-12">
-                                <div class="address-info">
-                                    <div class="row">
-
-                                        <div class="col-md-3 col-xs-3">
-                                            <div class="address-info-icon text-center center-block bg-light-gray">
-                                                <i class="fa fa-map-marker"></i>
-                                            </div> <!-- /.address-info-icon -->
-                                        </div>
-
-                                        <div class="col-md-9 col-xs-9 address-info-desc">
-                                            <h3>Office Address</h3>
-                                            <p>
-                                                Koffman Parklan, P.O Box 555 <br/>
-                                                StreetView, USA
-                                            </p>
-                                        </div> <!-- /.address-info-desc -->
-
-                                    </div>
-                                </div> <!-- /.address-info -->
-                            </div>
-
-                            <div class="col-md-4 col-xs-12">
-                                <div class="address-info">
-                                    <div class="row">
-
-                                        <div class="col-md-3 col-xs-3">
-                                            <div class="address-info-icon text-center center-block bg-light-gray">
-                                                <i class="fa fa-phone"></i>
-                                            </div> <!-- /.address-info-icon -->
-                                        </div>
-
-                                        <div class="col-md-9 col-xs-9 address-info-desc">
-                                            <h3>Phone Number</h3>
-                                            <p>
-                                                Local: 1-500-153-hello
-                                                <br/>
-                                                Mobile: 1-600-153-hello
-                                            </p>
-                                        </div> <!-- /.address-info-desc -->
-
-                                    </div>
-                                </div> <!-- /.address-info -->
-                            </div>
-
-                            <div class="col-md-4 col-xs-12">
-                                <div class="address-info">
-                                    <div class="row">
-
-                                        <div class="col-md-3 col-xs-3">
-                                            <div class="address-info-icon text-center center-block bg-light-gray">
-                                                <i class="fa fa-envelope-o"></i>
-                                            </div> <!-- /.address-info-icon -->
-                                        </div>
-
-                                        <div class="col-md-9 col-xs-9 address-info-desc">
-                                            <h3>Email Address</h3>
-                                            <p>
-                                                info@example.com
-                                                <br/>
-                                                www.example.com
-                                            </p>
-                                        </div> <!-- /.address-info-desc -->
-
-                                    </div>
-                                </div> <!-- /.address-info -->
-                            </div>
-
-
-
-                            <!-- google map iframe -->
                             <section class="g-map">
                                 <div class="row">
-                                    <div class="col-md-12">
-                                        <div class="google-map">
-                                            <div id="map-canvas"></div>
-                                        </div>
-                                    </div>
+                                    <img src="assets/img/map.png" alt="">
+                                </div>
+                                <div class="row">
+                                    <p>아무거나 타고 오삼</p>
+                                    <p>아무거나 타고 오삼</p>
+                                    <p>아무거나 타고 오삼</p>
+                                    <p>아무거나 타고 오삼</p>
                                 </div>
                             </section> <!-- /.g-map (google-map end) -->
 
@@ -357,20 +283,6 @@
                                     A. 인천광역시 부평구 새갈로 57 <br>(갈산동 454, 갈산동 대성유니드) <br>
                                 </p>
                             </div>
-
-                            <!-- <div class="row">
-                                <div class="col-md-12">
-                                    <ul class="footer-share-button">
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                    </ul> /.footer-share-button
-                                </div>
-                            </div> -->
                         </div> <!-- /.footer-widget -->
 
                     </div>
@@ -421,22 +333,7 @@
         <script type="text/javascript" src="assets/js/jquery-2.1.3.min.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="assets/js/owl.carousel.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js"></script>
-        <script>
-            function initialize() {
-                var mapCanvas = document.getElementById('map-canvas');
-                var mapOptions = {
-                    center: new google.maps.LatLng(24.921212, 91.833073),
-                    zoom: 16,
-                    mapTypeId: google.maps.MapTypeId.ROADMAP
-                }
-                var map = new google.maps.Map(mapCanvas, mapOptions)
-            }
-            google.maps.event.addDomListener(window, 'load', initialize);
-        </script>
-
-        <!-- script for sponsor using owl carousel -->
-
+        
         <script type="text/javascript">
             $(document).ready(function() {
  
