--- a/product_1.html
+++ b/product_1.html
@@ -381,10 +381,17 @@
                                  </div>
                              </div>
                          </div> --> <!-- /.headline -->
-                         <div class="team-list" id="product1">
+                         <div class="team-list">
                             <div class="container">
                                 <div class="row">
-                                    <img src="assets/img/product/product_1.jpg" class="center-block" style="background-size: cover; width : 100%;">
+                                    <img src="assets/img/product/product1.jpg" class="center-block" style="background-size: cover; width : 100%;">
+                                </div>
+                            </div>
+                        </div> <!-- end of /.team-list -->
+                         <div class="team-list">
+                            <div class="container">
+                                <div class="row">
+                                    <img src="assets/img/product/product2.jpg" class="center-block" style="background-size: cover; width : 100%;">
                                 </div>
                             </div>
                         </div> <!-- end of /.team-list -->
