--- a/product_2.html
+++ b/product_2.html
@@ -381,14 +381,21 @@
                                  </div>
                              </div>
                          </div> --> <!-- /.headline -->
-                         <div class="team-list" id="product1">
+                         <div class="team-list">
                             <div class="container">
                                 <div class="row">
-                                    <img src="assets/img/product/product_2.jpg" class="center-block" style="background-size: cover; width : 100%;">
+                                    <img src="assets/img/product/m_product1.png" class="center-block" style="background-size: cover; width : 100%;">
                                 </div>
                             </div>
                         </div> <!-- end of /.team-list -->
-                                            </div>
+                         <div class="team-list">
+                            <div class="container">
+                                <div class="row">
+                                    <img src="assets/img/product/m_product2.png" class="center-block" style="background-size: cover; width : 100%;">
+                                </div>
+                            </div>
+                        </div> <!-- end of /.team-list -->
+                    </div>
                 </section>
                  <!-- end of designation section -->             
 
