6/13 첫번째 커밋

--- a/about.html
+++ b/about.html
@@ -194,10 +194,8 @@
                                     <img src="assets/img/map.png" alt="">
                                 </div>
                                 <div class="row">
-                                    <p>아무거나 타고 오삼</p>
-                                    <p>아무거나 타고 오삼</p>
-                                    <p>아무거나 타고 오삼</p>
-                                    <p>아무거나 타고 오삼</p>
+                                    <p>굴포천역 | 굴포천역 7번출구 | 87번, 24-1번, 905번</p>
+                                    <p>갈산역 | 갈산역 2번출구 뒷쪽 승차장() | 760번, 582번</p> 
                                 </div>
                             </section> <!-- /.g-map (google-map end) -->
 
