6/13 두번째 커밋

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                                     <div class="col-md-6">
                                         <div class="team-member-box text-center">
-                                            <a href="product_1.html" target="_blank"><img src="assets/img/team-member1.jpg" class="img-responsive center-block" alt="고백키트 이미지"></a>
+                                            <a href="product_1.html"><img src="assets/img/team-member1.jpg" class="img-responsive center-block" alt="고백키트 이미지"></a>
                                             <div class="team-member-description">
                                                 <div class="team-member-about">
                                                     <h4>고백키트</h4>
@@ -175,7 +175,7 @@
 
                                     <div class="col-md-6">
                                         <div class="team-member-box text-center">
-                                            <a href="product_2.html" target="_blank"><img src="assets/img/team-member2.jpg" class="img-responsive center-block" alt="마스크팩 이미지"></a>
+                                            <a href="product_2.html"><img src="assets/img/team-member2.jpg" class="img-responsive center-block" alt="마스크팩 이미지"></a>
                                             <div class="team-member-description">
                                                 <div class="team-member-about">
                                                     <h4>마스크팩</h4>
