--- a/product_2.html
+++ b/product_2.html
@@ -384,14 +384,14 @@
                          <div class="team-list">
                             <div class="container">
                                 <div class="row">
-                                    <img src="assets/img/product/m_product1.png" class="center-block" style="background-size: cover; width : 100%;">
+                                    <img src="assets/img/product/m_product1.jpg" class="center-block" style="background-size: cover; width : 100%;">
                                 </div>
                             </div>
                         </div> <!-- end of /.team-list -->
                          <div class="team-list">
                             <div class="container">
                                 <div class="row">
-                                    <img src="assets/img/product/m_product2.png" class="center-block" style="background-size: cover; width : 100%;">
+                                    <img src="assets/img/product/m_product2.jpg" class="center-block" style="background-size: cover; width : 100%;">
                                 </div>
                             </div>
                         </div> <!-- end of /.team-list -->
