--- a/index.html
+++ b/index.html
@@ -211,20 +211,20 @@
                     <div class="row">
 
                         <!-- useful links -->
-                        <div class="col-md-3 col-sm-6 col-xs-6 footer-widget">
-                            <h4>인플루언서</h4>
+                        <div class="col-md-4 col-sm-6 col-xs-6 footer-widget">
+                            <h4 style="font-size: 22px;">인플루언서</h4>
                             <ul class="row footer-links">
                                 <div class="col-md-6 col-sm-6 col-xs-6">
-                                    <li><a href="//www.instagram.com/heididrinkslove/?hl=ko" target="_blank">블랑두부</a></li>
-                                    <li><a href="//www.instagram.com/applekim2/?hl=ko" target="_blank">김사과</a></li>
-                                    <li><a href="//www.instagram.com/edge486/?hl=ko" target="_blank">엣지</a></li>
+                                    <li><a href="//www.instagram.com/heididrinkslove/?hl=ko" target="_blank" style="font-size: 14px;">블랑두부</a></li>
+                                    <li><a href="//www.instagram.com/applekim2/?hl=ko" target="_blank" style="font-size: 14pxf;">김사과</a></li>
+                                    <li><a href="//www.instagram.com/edge486/?hl=ko" target="_blank" style="font-size: 14px;">엣지</a></li>
                                 </div>
                             </ul>
                         </div>
 
                         <!-- recent news -->
-                        <div class="col-md-3 col-sm-6 col-xs-6 footer-widget">
-                            <h4>Beauty New</h4>
+                        <div class="col-md-4 col-sm-6 col-xs-6 footer-widget">
+                            <h4 style="font-size: 22px;">Beauty New</h4>
 
                             <div class="row footer-news">
                                 <div class="col-md-4 col-sm-4 col-xs-6">
@@ -233,7 +233,7 @@
                                 <div class="col-md-8 col-sm-4 col-xs-6">
                                     <div class="row">
                                         <p class="text-capitalize">
-                                            <a href="http://www.beautynury.com/news/view/84601/cat/10" target="_blank">
+                                            <a href="http://www.beautynury.com/news/view/84601/cat/10" target="_blank" style="font-size: 14px;">
                                                 국내 브랜드, 차세대 K뷰티 시장 선점 경쟁 심화
                                             </a>
                                         </p>
@@ -249,7 +249,7 @@
                                 <div class="col-md-8 col-sm-4 col-xs-6">
                                     <div class="row">
                                         <p class="text-capitalize">
-                                            <a href="//news.donga.com/Culture/3/07/20190416/95070898/1" target="_blank">
+                                            <a href="//news.donga.com/Culture/3/07/20190416/95070898/1" target="_blank" style="font-size: 14px;">
                                                 SNS 고백 키트 '제너셀 앰플', 3시간 만에 3500개 매진
                                             </a>
                                         </p>
@@ -260,39 +260,24 @@
                         </div> <!-- /.footer-widget -->
 
                         <!-- about avada agency -->
-                        <div class="col-md-3 col-sm-6 col-xs-6 footer-widget">
-                            <h4>GENUCELL</h4>
-                            <p>
-                                GENUCELL은 인플루언서분들을 응원합니다!
-                            </p>
-
+                        <div class="col-md-4 col-sm-6 col-xs-6 footer-widget">
+                            <h4 style="font-size: 22px;">CONTACT</h4>
                             <div class="footer-address">
-                                <p>
-
-                                    T. 032-545-2187  <br>
-                                    E. genucell@genucell.co.kr
-                                </p>
-                                <p>
-                                    A. 인천광역시 부평구 새갈로 57 <br>(갈산동 454, 갈산동 대성유니드) <br>
-                                </p>
+                                <address>
+                                  <strong>찾아오시는 길</strong><br>
+                                  <p>인천광역시 부평구 새갈로 57 <br>(갈산동 454, 갈산동 대성유니드)</p>
+                                  <br>
+                                  <abbr title="Phone">P:</abbr> (032)-545-2187
+                                </address>
+                                <addree>
+                                    <strong>
+                                        이메일
+                                    </strong>
+                                    <a href="mailto:#">genucell@genucell.co.kr</a>
+                                </addree>
                             </div>
-
-                            <!-- <div class="row">
-                                <div class="col-md-12">
-                                    <ul class="footer-share-button">
-                                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                    </ul> /.footer-share-button
-                                </div>
-                            </div> -->
                         </div> <!-- /.footer-widget -->
 
-                    </div>
                 </div>
             </footer>
 
