6/18 세번째 커밋

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                     <div class="row">
                                         <p class="text-capitalize">
                                             <a href="http://www.beautynury.com/news/view/84601/cat/10" target="_blank" style="font-size: 14px;">
-                                                국내 브랜드, 차세대 K뷰티 시장 선점 경쟁 심화
+                                                국내 브랜드, 차세대 K뷰티 시장 선점<br>경쟁 심화
                                             </a>
                                         </p>
                                         <p class="news-date">2019.06.04</p>
@@ -270,9 +270,7 @@
                                   <abbr title="Phone">P:</abbr> (032)-545-2187
                                 </address>
                                 <addree>
-                                    <strong>
-                                        이메일
-                                    </strong>
+                                    <strong>이메일</strong><br>
                                     <a href="mailto:#">genucell@genucell.co.kr</a>
                                 </addree>
                             </div>
